app/static/view_book.css
/* Main layout wrapper */
.page-wrapper {
    width: 60%;
    max-width: 1400px;
    margin: 0 auto;
    padding: 20px;
    align-items: center;
    justify-content: center;
    align-content: center;
}

/* Book container card */
.book-container {
    background-color: #111827;
    padding: 2rem;
    border-radius: 12px;
}

/* Layout for cover + book info */
.book-header {
    display: flex;
    gap: 2rem;
    flex-wrap: wrap;
}

/* Book cover */
.book-cover {
    width: 160px;
    height: 220px;
    background-color: #374151;
    border-radius: 8px;
    display: flex;
    align-items: center;
    justify-content: center;
    color: #9ca3af;
}

/* Formats book info section */
.book-info {
    flex: 1;
    min-width: 300px;
}

/* Generic section spacing */
.section {
    margin-top: 2rem;
}

/* Summary */
.summary-text{
    min-width: 30rem;
    max-width: 40rem;
    max-height: 15rem;
    overflow-y: scroll;
    overflow-wrap: break-word;
    white-space: pre-line;
    white-space-collapse: preserve-breaks;
    scrollbar-width: thin;
}

/* Genre and tag styling */
.tag {
    background-color: #374151;
    padding: 0.4rem 0.8rem;
    border-radius: 6px;
    font-size: 0.8rem;
    margin-right: 0.4rem;
    border: none;
    color: white;
    cursor: pointer;
}

/* Active tag state */
.tag.active {
    background-color: #4346f1;
}

/* Hover styling for tag selection */
.tag:hover {
    background-color: #4f46e5;
}

/* Styles genres */
.genre-tag {
    background-color: #374151;
    padding: 0.4rem 0.8rem;
    border-radius: 6px;
    font-size: 0.8rem;
    margin-right: 0.4rem;
    border: none;
    color: white;
}

/* Input field styling */
    input[type="number"] {
    padding: 0.4rem;
    border-radius: 6px;
    border: none;
    background-color: #1f2933;
    color: #e5e7eb;
}

/* Notes textarea styling */
textarea {
    width: 100%;
    border-radius: 8px;
    border: none;
    background-color: #1f2933;
    color: #e5e7eb;
    padding: 0.6rem;
}

/* Individual note card styling */
.note-card {
    background-color: #1f2933;
    padding: 0.6rem;
    border-radius: 6px;
    margin: 0.6rem;
    margin-bottom: 0;
    height: 100px;
    width: 200px;
    display: grid;
}

/* Hidden edit sections */
.hidden {
    display: none;
}

/* Style display of notes section */
#notes {
    border-radius: 8px;
    display: flex;
    height: 500px;
    justify-content: space-around;
}

/* Styles the text area to enter/edit a note */
#note-edit-textarea{
    font-size: 15px;
    resize: none;
    width: 100%;

    white-space-collapse: preserve-breaks;
    white-space: pre-wrap;
}

/* Styles the Notes section */
#note-select{
    height: 400px;
    width: 250px;
    max-height: 400px;
    border: solid;
    border-radius: 8px;
    display: flex;
    overflow-y: auto;
    overflow-x: hidden;
    display: grid;
    padding-bottom: 0.6rem;
    scrollbar-width: thin;
}

/* Style for displaying note */
.note-text{
    overflow: hidden;
    text-overflow: ellipsis;
    width: auto;
    max-height: 40px;
    margin: 0;
    white-space-collapse: preserve-breaks;
}

/* Styling for note card View/Edit button */
.note-card-button{
    bottom: 0;
    position: relative;
    height: 30px;
    align-self: center;
    align-items: center;
    border: none;
    background-color: #6366f1;
    color: white;
    font-weight: 600;
    cursor: pointer;
    padding: 0.4rem 0.8rem;
    border-radius: 6px;
    font-size: 0.8rem;
}

/* Hover styling for note card View/Edit button */
.note-card-button:hover {
    background-color: #4f46e5;
}

/* Formatting for note ID */
.note-text-id{
    padding: 0;
    margin: 0;
    font-size: 10px;
}

/* Styling for Edit/Delete button */
.note-edit-btn{
    margin-bottom: 10px;
    background-color: #6366f1;
    padding: 0.4rem 0.8rem;
    border-radius: 6px;
    font-size: 0.8rem;
    margin-right: 0.4rem;
    border: none;
    color: white;
    cursor: pointer;
    font-weight: 600;
}

/* Hover styling for Edit/Delete buttn */
.note-edit-btn:hover {
    background-color: #4f46e5;
}

/* Hide Edit/Delete button when no notes available */
#note-edit-delete{
    visibility: hidden;
}

/* Styling for Add New Note button */
#note-add{
    height: 30px;
    width: 100%;
    cursor: pointer;
}

/* Formats progress bar */
progress {
    width: 300px;
    height: 20px;
    appearance: none;
    border: none;
    border-radius: 10px;
    background-color: #eee;
    overflow: hidden;
}

/* WebKit browsers (Chrome, Safari, Edge) */
progress::-webkit-progress-bar {
  background-color: #eee;
  border-radius: 10px;
}

/* Creates color gradient for progress bar */
progress::-webkit-progress-value {
  background: linear-gradient(90deg, #c6e2c1, #5de054);
  border-radius: 10px;
}

/* Progress bar gradient for Firefox */
progress::-moz-progress-bar {
  background: linear-gradient(90deg, #c6e2c1, #5de054);
  border-radius: 10px;
}

/* Overlay text  for progress bar*/
.progress-bar-text {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    font-weight: bold;
    color: black;
    pointer-events: none;
}

/* Container to hold progress bar and text */
 .progress-bar-container {
    position: relative;
    width: 300px;
}
/* Formats progress bar and +/- buttons to be in same row. */
.progress-section {
    display: flex;
    align-items: center;
    gap: 10px;
}

/* Main styling for large buttons */
.style-button {
    margin-top: 1rem;
    padding: 0.6rem 1rem;
    border-radius: 8px;
    border: none;
    background-color: #6366f1;
    color: white;
    font-weight: 600;
    cursor: pointer;
}

/* Hover styling for large buttons */
.style-button:hover {
    background-color: #4f46e5;
}

/* Adds smooth transition animation for hover styling */
.transition_css {
      transition: background-color 0.2s ease-in-out;
}    

/* Checkbox styling */
input[type="checkbox"] {
    accent-color: #4f46e5;
}

/* Hover styling for checkboxes */
input[type="checkbox"]:hover {
    outline: 2px solid #4f46e5;
    cursor: pointer;
}

/* Main styling for smaller buttons */
.small-button {
    background-color: #6366f1;
    padding: 0.4rem 0.8rem;
    border-radius: 6px;
    font-size: 0.8rem;
    margin-right: 0.4rem;
    border: none;
    color: white;
    cursor: pointer;
    font-weight: 600;
}

/* Hover styling for smaller buttons */
.small-button:hover {
    background-color: #4f46e5;
}

/* Disables native display choose file for custom styling */
input[type="file"] {
    display: none;
}

/* Styling for file button */
.file-button {
    display: inline-block;
    background-color: #6366f1;
    padding: 0.4rem 0.8rem;
    border-radius: 6px;
    font-size: 0.8rem;
    margin-right: 0.4rem;
    border: none;
    color: white;
    cursor: pointer;
    font-weight: 600;
}

/* Hover styling for file button */
.file-button:hover {
    background-color: #4f46e5;
}

/* Genre option styling */
.select-genre {
    margin-top: 1rem;
    border: none;
    background-color: #6366f1;
    color: white;
    font-weight: 600;
    padding: 0.4rem 0.8rem;
    border-radius: 6px;
    font-size: 0.8rem;
    margin-right: 0.4rem;
    cursor: pointer;
}

/* Adds hand pointer cursor to checkbox items */
.cursor {
    cursor: pointer;
}

